tests/negative/semantic/multiple_errors_summary/input.ci
int f() {
    int x = "bad";
    y = 1;
    return "oops";
}

void main() {}
